name update, added tag to qualifiers

--- a/index.html
+++ b/index.html
@@ -803,6 +803,7 @@ public class MainActivity extends AppCompatActivity {
     CharG g2;
     ...
 </pre>
+Tag: <a href="https://github.com/andretietz/dagger2-introduction/blob/qualifiers/app/src/main/java/eu/unicate/dagger2showcase/MainActivity.java#L26">qualifiers</a>
                 </li>
             </ul>
         </article>
