added new image

--- a/index.html
+++ b/index.html
@@ -207,11 +207,12 @@ print(d, a, g, g, e, r);</b>
             <h3>It's everything about...</h3>
         </hgroup>
         <article>
-            <ul class="build">
+            <ul>
                 <li>Modules</li>
                 <li>Components</li>
                 <li>Scopes</li>
             </ul>
+            <img style="position: absolute; width:400px; left: 400px; top: 150px" src="images/dagger2/msc.jpg"/>
         </article>
     </slide>
     <slide>
@@ -256,7 +257,7 @@ print(d, a, g, g, e, r);</b>
         <hgroup>
             <h2>Scoping</h2>
 
-            <h3>Lifecycle Dependency</h3>
+            <h3>Which Object can live how long max?</h3>
         </hgroup>
         <article class="flexbox vcenter">
             <span><img src="images/dagger2/di-graph-full.png"></span>
