added code example for additional info page

--- a/index.html
+++ b/index.html
@@ -832,6 +832,13 @@ Tag: <a href="https://github.com/andretietz/dagger2-introduction/blob/qualifiers
             <h2>Dagger2 Library Information</h2>
         </hgroup>
         <article >
+<pre class="prettyprint" data-lang="groovy">
+dependencies {
+    ...
+    // dagger 2
+    compile 'com.google.dagger:dagger:2.0.1'
+    ...
+</pre>
             <ul>
                 <li>8 Classes</li>
                 <li>6 Annotations</li>
