small wording update

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ buildscript {
         <hgroup>
             <h2>Hands on!</h2>
 
-            <h3>What do we need for that?</h3>
+            <h3>What do we need to use Dagger2?</h3>
         </hgroup>
         <article class="smaller">
             <ul class="build">
